# b2bAI-VST

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.md  Makefile  README.md
Resources/: magic.xml
Sources/: API.cpp  Constants.h  GridComponent.cpp  GridComponent.h  KeyboardComponent.cpp  MidiFileListBox.cpp  MidiFileListBox.h  MidiSequence.cpp  MidiSequence.h  NoteRectangle.cpp  NoteRectangle.h  PianoRoll.cpp  PianoRoll.h  PianoRollComponent.h  PluginProcessor.cpp  PluginProcessor.h  RunButton.cpp  RunButton.h  SearchBar.cpp  Strings.h
plugin/: CMakeLists.txt  Constants.h  GridComponent.cpp  GridComponent.h  KeyboardComponent.cpp  KeyboardComponent.h  MIDIClip.cpp  MIDIClip.h  MIDIFileListBox.cpp  MIDIFileListBox.h  MidiFileListBox.cpp  MidiSequence.cpp  MidiSequence.h  Note.h  NoteRectangle.cpp  NoteRectangle.h  PianoRoll.cpp  PianoRoll.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SearchBar.cpp  SearchBar.h  magic.sav.xml
plugin/Resources/: NoteComponent.cpp  NoteComponent.h  magic.xml
res/: magic.xml
